--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
+    height: auto;
 }
 
 .container * {
@@ -49,6 +50,7 @@ body {
     font-weight: 300;
     letter-spacing: .09em;
     text-transform: uppercase;
+    min-width: 200px;
 }
 
 .flex-outer > li > label,
@@ -67,13 +69,18 @@ body {
 }
 
 .flex-outer li input:not([type='checkbox']),
+.flex-outer li input:not([type='radio']),
 .flex-outer li textarea {
     padding: 15px;
-    border: none;
+    margin: 5px;
+}
+
+.flex-outer li input[type=text]{
+    min-width: 300px;
 }
 
 .flex-outer li button {
-    margin-left: auto;
+    margin-left: 375px;
     padding: 8px 16px;
     border: none;
     background: #333;
@@ -103,4 +110,12 @@ body {
     display: list-item;
 }
 
-
+.error{
+    border: 1.3px solid red;
+}
+.error-label{
+    font-size: xx-small;
+}
+.color{
+    margin-left: 7px;
+}
